--- a/index.html
+++ b/index.html
@@ -20,16 +20,78 @@
     <div class="slides">
       <section data-markdown>
         #### Аттестация
-        ## Junior разаротчик (Platfformeco)
+        ## Middle разаротчик (Platfformeco)
         Вихляев Владимир
       </section>
 
       <section data-markdown>
         ### Общие компетенции
+
+      </section>
+
+      <section>
+        <section data-markdown>
+          #### YouTrack
+        </section>
+
+        <section data-markdown>
+          #### Почта
+        </section>
+
+        <section data-markdown>
+          #### Git
+        </section>
+
+        <section data-markdown>
+          #### K8s
+        </section>
+
+        <section data-markdown>
+          #### Soft skills
+        </section>
       </section>
 
       <section data-markdown>
         ## Специализированные компетенции
+      </section>
+
+      <section>
+        <section data-markdown>
+          #### Задачи
+        </section>
+
+        <section data-markdown>
+          #### PostgreSQL
+        </section>
+
+        <section data-markdown>
+          #### Oracle
+        </section>
+
+        <section data-markdown>
+          #### OS/Elasticsearch
+        </section>
+
+        <section data-markdown>
+          #### OS/Elasticsearch
+        </section>
+
+        <section>
+          #### Redis
+        </section>
+
+        <section>
+          #### Kafka
+        </section>
+
+        <section>
+          #### Platformeco
+        </section>
+
+      </section>
+
+      <section>
+        #### Литература
       </section>
 
     </div>
